# WSI-Service

./: .coveragerc  .dockerignore  .env.auth  .gitignore  .gitlab-ci.yml  .gitlab_ci.yml  .gitmodules  CHANGELOG.md  Dockerfile  Dockerfile_nonroot  Dockerfile_test  LICENSE  README.md  check_existing_docker.sh  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.storage-mapper-service.yml  docker-compose.yml  env_auth  env_default  pyproject.toml  renovate.json  requirements.txt  setup.cfg  setup.py
.github/workflows/: docker-publish.yml
.gitlab/issue_templates/: story_qa_level_1.md
.gitlab/merge_request_templates/: merge_request_qa_level_1.md
build_rationai/: .dockerignore  Dockerfile  README.md  build.sh  pod.run.sh
build_standalone/: .dockerignore  Dockerfile  README.md  build.sh  docker-compose.yml  gunicorn_conf.py  no-auth.env  run.sh  sample-env
performance_tests/: Dockerfile  README.md  helpers.py  run.sh  run_create_plots.py  run_performance_tests_openslide.py  run_performance_tests_wsi_service.py  run_results_comparison.py  wsi_service.py
performance_tests/results/results_095c76f/: performance_tests_openslide.csv  performance_tests_wsi_service.csv
performance_tests/results/results_6112625/: performance_tests_openslide.csv  performance_tests_wsi_service.csv
tests/integration/: conftest.py  env_tests  test_integration_general.py  test_integration_storage_mapper_service.py
tests/integration/plugin_example_tests/: plugin_example_tests.py
tests/unit/: test_api.py  test_client.py  test_local_mapper.py  test_plugins.py  test_slide_manager.py  test_slide_utils.py
wsi_service/: __init__.py  __main__.py  api.py  api_utils.py  app.py  application.py  base_mapper.py  config.py  csv_mapper.py  image_utils.py  local_mapper.py  local_mapper_models.py  local_mapper_paths.py  models.py  openslide_slide.py  paths_mapper.py  plugin_loader.py  plugins.py  queries.py  responses.py  service_status.py  settings.py  simple_mapper.py  singletons.py  slide.py  slide_dummy.py  slide_manager.py  slide_source.py  slide_utils.py  sync_slide.py  utils.py  validation_viewer.html  version.py  viewer.html
wsi_service/api/root/: __init__.py  alive.py  local_mode.py  validation_viewer.html  viewer.html  viewer.py
wsi_service/api/v1/: __init__.py  slides.py
wsi_service/api/v3/: __init__.py  local_mode.py  singletons.py  slides.py  slides_batch_api_helpers.py
wsi_service/custom_models/: batch_queries.py  local_mapper_models.py  queries.py  responses.py  service_status.py
wsi_service/custom_models/old_v3/: storage.py
wsi_service/loader_plugins/: slide_dummy.py  slide_isyntax.py  slide_ometif.py  slide_openslide.py
wsi_service/loader_plugins/deformation_plugin/: deformed_slide.py  license  pyproject.toml  readme.md
wsi_service/loader_plugins/deformation_plugin/deformation_plugin/: __init__.py  _interpolate.cpp  deformation.py  interpolate.h  interpolate_c.py
wsi_service/loader_plugins/deformation_plugin/deformation_plugin/tests/: test_deformation_plugin.py  test_interpolate_c.py  testdata.py.REMOVED.git-id
wsi_service/loader_plugins/deformation_plugin/test_data/: dot_zero_ones.sqreg.REMOVED.git-id  ones.sqreg.REMOVED.git-id  zeros.sqreg.REMOVED.git-id
wsi_service/loader_plugins/isyntax/: Dockerfile  pyproject.toml
wsi_service/loader_plugins/isyntax/backend/: __main__.py
wsi_service/loader_plugins/isyntax/isyntax_backend/: __main__.py  isyntax_reader.py
wsi_service/mapper_iterator/: iterator.py  local_mapper.py
wsi_service/mapper_iterator/iterator/: case_rules.yaml  control_extensions.py  control_name.py  extensions.py  iterator.py  local_id_creation.py  settings.py
wsi_service/tests/: remove_me.json  test_alive.py  test_api.py  test_api_helpers.py  test_api_local_mapper.py  test_api_slide_close.py  test_api_wsi.py  test_helper.py  test_plugins.py
wsi_service/tests/api/: settings.py  singletons.py  test_api_helpers.py  test_api_local_mapper.py  test_api_slide_close.py  test_image_utils.py  test_plugins.py
wsi_service/tests/integration/: conftest.py  env_tests  test_integration_general.py  test_integration_helper.py  test_integration_storage_mapper_service.py  test_integration_wsi.py
wsi_service/tests/unit/: test_api.py  test_client.py  test_image_data.py  test_image_utils.py  test_local_mapper.py  test_plugins.py  test_slide_manager.py  (+2 more)
wsi_service/utils/: app_batch_utils.py  app_utils.py  download_utils.py  icc_profile.py  image_utils.py  lib_utils.py  slide_utils.py
wsi_service_base_plugins/: .gitignore  README.md
wsi_service_base_plugins/libtiff/: pyproject.toml
wsi_service_base_plugins/mvt/: CHANGELOG.md  README.md  pyproject.toml
wsi_service_base_plugins/mvt/wsi_service_plugin_mvt/: __init__.py  slide.py
wsi_service_base_plugins/openslide/: CHANGELOG.md  pyproject.toml
wsi_service_base_plugins/openslide/wsi_service_plugin_openslide/: __init__.py  slide.py
wsi_service_base_plugins/openslide/wsi_service_plugin_openslide/tests/: test_cache.py  test_plugin.py  test_stresstest.py
wsi_service_base_plugins/pil/: CHANGELOG.md  pyproject.toml
wsi_service_base_plugins/pil/wsi_service_plugin_pil/: __init__.py  slide.py
wsi_service_base_plugins/pil/wsi_service_plugin_pil/tests/: test_plugin.py
wsi_service_base_plugins/tifffile/: CHANGELOG.md  pyproject.toml
wsi_service_base_plugins/tifffile/wsi_service_plugin_tifffile/: __init__.py  slide.py
wsi_service_base_plugins/tifffile/wsi_service_plugin_tifffile/tests/: test_plugin.py
wsi_service_base_plugins/tifffile_generic/: CHANGELOG.md  pyproject.toml
wsi_service_base_plugins/tiffslide/: CHANGELOG.md  pyproject.toml
wsi_service_base_plugins/tiffslide/wsi_service_plugin_tiffslide/: __init__.py  slide.py
wsi_service_base_plugins/tiffslide/wsi_service_plugin_tiffslide/tests/: test_compare_openslide.py  test_stresstest.py
wsi_service_base_plugins/wsidicom/: CHANGELOG.md  pyproject.toml
wsi_service_base_plugins/wsidicom/wsi_service_plugin_wsidicom/: __init__.py  slide.py
wsi_service_base_plugins/wsidicom/wsi_service_plugin_wsidicom/tests/: test_cache.py  test_plugin.py
(+21 files in other folders)
