[tool.poetry]
name = "wsi-service"
version = "0.5.4"
description = "EMPAIA WSI Service to stream whole slide images"
authors = ["EMPAIA <dev-support@empaia.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
fastapi = "^0.66.0"
requests = "^2.25.0"
uvicorn = "^0.14.0"
numpy = "^1.21.0"
Pillow = "^8.3.1"
imagecodecs = "^2021.1.11"
tifffile = "^2021.1.14"
uvloop = "^0.15.3"
aiohttp = "^3.7.4"
httptools = "^0.2.0"
filelock = "^3.0.12"

[tool.poetry.dev-dependencies]
aiohttp = "^3.7.4"
black = "^21.5b2"
debugpy = "^1.3.0"
isort = "^5.6.4"
psutil = "^5.8.0"
pylint = "^2.9.3"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.10.1"
pytest = "^6.1.2"
requests-mock = "^1.8.0"
requests = "^2.7.0"
wsi-service-plugin-tifffile = { path = "wsi_service_base_plugins/tifffile", develop = true }
wsi-service-plugin-pil = { path = "wsi_service_base_plugins/pil", develop = true }
wsi-service-plugin-openslide = { path = "wsi_service_base_plugins/openslide", develop = true }
aioresponses = "^0.7.2"
pytest-aioresponses = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
multi_line_output = 3
include_trailing_comma = true

[tool.pylint."MASTER"]
ignored-modules = ["pydantic"]

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
disable = "R,C,W0613,E0213,W0603,W0231,E1136,W0707,W0622"
