[tool.poetry]
name = "wsi-service-plugin-openslide"
version = "1.3.1"
description = ""
authors = ["EMPAIA <dev-support@empaia.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
openslide-wrapper = "^1.1.2"

[tool.poetry.dev-dependencies]
psutil = "^5.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
