[tool.poetry]
name = "wsi-service-plugin-openslide"
version = "1.4.2"
description = ""
authors = ["EMPAIA <dev-support@empaia.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
openslide-python = "^1.4.2"

[tool.poetry.group.dev.dependencies]
psutil = "^5.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
