[tool.poetry]
name = "wsi-service-plugin-tifffile"
version = "0.1.0"
description = ""
authors = ["EMPAIA <dev-support@empaia.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
Pillow = "^8.0.1"
scikit-image = "^0.18.1"
tifffile = "^2021.1.14"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
