[tool.poetry]
name = "wsi-service-plugin-tifffile"
version = "0.1.3"
description = ""
authors = ["EMPAIA <dev-support@empaia.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
Pillow = "^9.0.0"
scikit-image = "^0.19.2"
tifffile = "~2022.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
