[tool.poetry]
name = "wsi-service-plugin-tifffile"
version = "0.4.3"
description = ""
authors = ["EMPAIA <dev-support@empaia.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.22.3"
Pillow = "^10.0.0"
scikit-image = "^0.22.0"
tifffile = "^2024.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
