[tool.poetry]
name = "wsi-service-plugin-tiffslide"
version = "0.2.3"
description = ""
authors = ["EMPAIA <dev-support@empaia.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tiffslide = "^2.0.0"

[tool.poetry.dev-dependencies]
psutil = "^5.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
