[tool.poetry]
name = "wsi-service-plugin-tiffslide"
version = "0.2.3"
description = ""
authors = ["EMPAIA <dev-support@empaia.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
tiffslide = "^2.5.1"
imagecodecs = "^2025.0.0"

[tool.poetry.group.dev.dependencies]
psutil = "^5.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
