[tool.poetry]
name = "wsi-service-plugin-wsidicom"
version = "0.4.2"
description = ""
authors = ["EMPAIA <dev-support@empaia.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
wsidicom = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
