[tool.poetry]
name = "wsi-service-plugin-wsidicom"
version = "0.4.4"
description = ""
authors = ["EMPAIA <dev-support@empaia.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
wsidicom = "^0.27.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
