[tool.poetry]
name = "deformationplugin"
version = "0.1.0"
description = "Serves deformed images based on the EMPAIA WSI-Service"
authors = ["Johannes Lotz <johannes.lotz@mevis.fraunhofer.de>"]
license = "(C) 2021 Fraunhofer MEVIS, All rights reserved. Different licenses apply to some code. See readme."

# export SYSTEM_VERSION_COMPAT=1 to make this work on mac (required for numpy for some reason...)

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.1"
scipy = "1.6.0"
Pillow = "^8.1.0"
requests = "^2.25.1"
invoke = "^1.5.0"
cffi = "^1.14.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
pylint = "^2.6.0"
pytest-cov = "^2.10.1"
pytest = "^6.1.2"
requests-mock = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = 'wsi_service/models'

[tool.isort]
profile = "black"