[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for reading isyntax through Philips Pathology SDK."
authors = ["Henning Höfener", "Johannes Lotz", "Nick Weiss", "Michael Franz"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.5"
pyzmq = "^22.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"